@@ -2,13 +2,15 @@ package com.yupi.mojcodesandbox;
 
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
+import cn.hutool.core.util.ArrayUtil;
 import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
 import com.yupi.mojcodesandbox.model.ExecuteCodeRequest;
 import com.yupi.mojcodesandbox.model.ExecuteCodeResponse;
 import com.yupi.mojcodesandbox.model.ExecuteMessage;
 import com.yupi.mojcodesandbox.model.JudgeInfo;
 import com.yupi.mojcodesandbox.utils.ProcessUtils;
-import org.springframework.util.StopWatch;
 
 import java.io.File;
 import java.nio.charset.StandardCharsets;
@@ -20,13 +22,32 @@ import java.util.UUID;
 public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+    private static final String SECURITY_MANAGER_PATH = "E:\\code\\moj-code-sandbox\\src\\main\\java\\com\\yupi\\mojcodesandbox\\security";
+    private static final String SECURITY_CLASS_NAME = "MySecurityManager";
+    private static final long TIME_OUT = 5000L;
+    private static final List<String> blackList = Arrays.asList("File", "exec");
+    private static final WordTree WORD_TREE;
+
+
+    static {
+        // 初始化
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+    }
 
     @Override
     public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
 
+
+//        FoundWord foundWord = WORD_TREE.matchWord(code);
+//        if (foundWord != null) {
+//            System.out.println("包含禁止词：" + foundWord.getFoundWord());
+//            return null;
+//        }
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
 
@@ -50,18 +71,37 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         }
         // 执行代码
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
-        for (String inputArgs : inputList) {
-            StopWatch stopWatch = new StopWatch();
-            String runCmd = String.format("java -Dfile.encoding=utf-8 -cp %s Main %s", userCodeParentPath, inputArgs);
-//            String runCmd = String.format("java -Dfile.encoding=utf-8 -cp %s Main", userCodeParentPath);
+        if (ArrayUtil.isEmpty(inputList)) {
+                String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_CLASS_NAME);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        runProcess.destroy();
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
-//                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
                 executeMessageList.add(executeMessage);
                 System.out.println(executeMessage);
             } catch (Exception e) {
                 return getErrorResponse(e);
+            }
+        } else {
+            for (String inputArgs : inputList) {
+                String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_CLASS_NAME, inputArgs);
+
+                try {
+                    Process runProcess = Runtime.getRuntime().exec(runCmd);
+                    ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
+//                ExecuteMessage executeMessage = ProcessUtils.runInteractProcessAndGetMessage(runProcess, inputArgs);
+                    executeMessageList.add(executeMessage);
+                    System.out.println(executeMessage);
+                } catch (Exception e) {
+                    return getErrorResponse(e);
+                }
             }
         }
 
@@ -124,8 +164,9 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
         ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
-        executeCodeRequest.setInputList(Arrays.asList("1 2", "1 3"));
-        String code = ResourceUtil.readStr("testCode/simpleCompute/Main.java", StandardCharsets.UTF_8);
+//        executeCodeRequest.setInputList(Arrays.asList("1 2", "1 3"));
+//        String code = ResourceUtil.readStr("testCode/simpleCompute/Main.java", StandardCharsets.UTF_8);
+        String code = ResourceUtil.readStr("testCode/unsafeCode/WriteFileError.java", StandardCharsets.UTF_8);
 
         executeCodeRequest.setCode(code);
         executeCodeRequest.setLanguage("java");
